--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Đoàn Kết, Đồng Văn, Yên Lạc, Vĩnh Phúc</p>
-                                    <a class="text-center-sm" href="https://l.messenger.com/l.php?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2Fnh%25C3%25A0%2Bm%25C3%25A1y%2Bg%25E1%25BA%25A1ch%2B%25C4%2590o%25C3%25A0n%2BK%25E1%25BA%25BFt%2F%4021.2781696%2C105.5476709%2C18z%2Fdata%3D!4m12!1m5!3m4!2zMjHCsDE2JzQzLjUiTiAxMDXCsDMyJzUyLjgiRQ!8m2!3d21.278736!4d105.547999!3m5!1s0x3134f1ad2d441363%3A0x22d0a00dd4d2d90b!8m2!3d21.2774524!4d105.547427!16s%252Fg%252F11g8vmmrcn%3Fentry%3Dttu&h=AT1Ot3ccUNCfFg6xt9eWrxRjUu8ZO-wp5g-umA3ZqFaMNqNWLAJZDagbqLFenz9S7HTaNaEiwekPqUUajSvaf0FfUTDC2PYhLAADJgOB3BbncfjSACY9NYZosUctIA"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/LwtedSiw58hN7tfu5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                     <div class="calendar-button">
                                         <div class="atcb">
@@ -450,7 +450,7 @@
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Đoàn Kết, Đồng Văn, Yên Lạc, Vĩnh Phúc</p>
-                                    <a class="text-center-sm" href="https://l.messenger.com/l.php?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2Fnh%25C3%25A0%2Bm%25C3%25A1y%2Bg%25E1%25BA%25A1ch%2B%25C4%2590o%25C3%25A0n%2BK%25E1%25BA%25BFt%2F%4021.2781696%2C105.5476709%2C18z%2Fdata%3D!4m12!1m5!3m4!2zMjHCsDE2JzQzLjUiTiAxMDXCsDMyJzUyLjgiRQ!8m2!3d21.278736!4d105.547999!3m5!1s0x3134f1ad2d441363%3A0x22d0a00dd4d2d90b!8m2!3d21.2774524!4d105.547427!16s%252Fg%252F11g8vmmrcn%3Fentry%3Dttu&h=AT1Ot3ccUNCfFg6xt9eWrxRjUu8ZO-wp5g-umA3ZqFaMNqNWLAJZDagbqLFenz9S7HTaNaEiwekPqUUajSvaf0FfUTDC2PYhLAADJgOB3BbncfjSACY9NYZosUctIA"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/LwtedSiw58hN7tfu5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                     <div class="calendar-button">
                                         <div class="atcb">
