--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="swiper-slide">
                     <div class="slide-inner slide-bg-image"
-                        data-background="images/VIP_8333.JPG">
+                        data-background="images/VIP_8333.jpeg">
                     </div>
                 </div>
             </div>
