--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:site_name" content="Phương Nam &amp; Khánh Ly">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Phương Nam &amp; Khánh Ly">
-    <meta property="og:image" content="images/img/imgorg.JPG">
-    <meta property="og:url" content="images/img/imgorg.JPG">
+    <meta property="og:image" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
+    <meta property="og:url" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
     <meta property="og:description"
         content="Tình yêu đích thực đứng về phía nhau trong những ngày tốt đẹp và sát cánh hơn trong những ngày tồi tệ">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.PNG">
