--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:title" content="Phương Nam &amp; Khánh Ly">
     <meta property="og:image" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
     <meta property="og:url" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
+    <meta property="og:image:url" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
+    <meta property="og:image:secure_url" content="https://tranphuongnam1997.github.io/phuongnamkhanhly/images/img/imgorg.JPG">
     <meta property="og:description"
         content="Tình yêu đích thực đứng về phía nhau trong những ngày tốt đẹp và sát cánh hơn trong những ngày tồi tệ">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.PNG">
